# phd-project-microservice-development

./: .dockerignore  .envrc  .gcloudignore  .gitignore  Dockerfile  MANIFEST.in  POETRY_GUIDE.md  README.md  app.yaml  backup_to_onedrive.sh  docker-compose.yml  ghautocommit.sh  main.py  mkdocs.yaml  pyproject.toml  rebuildvenv.sh  requirements.txt  setup.py
api/: __init__.py  __main__.py  api_client.py  api_data_processor.py
api/tests/: test_api_client.py
api/utils/: __init__.py  request_helpers.py
apps/: missing_data_app.py  pipeline_monitoring.py
config/: api.json  paths.py  pipeline.json  query.json
configs/: README.md  api_config.json  dataloader_config.json  evaluation_config.json  feature_engineering_config.json  preprocessing_config.json  training_config.json
dashboard/: data.py  graphs.py  new_app.py  test_app.py
dashboard/assets/: custom_styles.css
dashboard/templates/: cards.py  dataloader_viewer.py  double_graph.py  dropdown.py  map.py
dashboard/utils/: __init__.py  color_helper.py  dashboard_helper.py
data/: artificial_data.py
database/: schema.sql
docs/: pipeline_flowchart.gv
docs/api_module/: __main__.md  api_client.md  api_data_processor.md  overview.md
docs/guides/: PACKAGING_GUIDE.md  POETRY_GUIDE.md
docs/pipeline_module/: __main__.md  stages.md  (+2 more)
dump/: a.py
experiments/: tracker.py
logs/: pipeline_output.txt
phd_package/: __init__.py
phd_project/: main.py
pipeline/: __main__.py  pipeline.py
site/: 404.html  index.html  search.html
src/: pipeline.py
utils/: config_helper.py  data_helper.py  pipeline_helper.py
(+359753 files in other folders)
