[tool.poetry]
name = "phd-project"
version = "0.1.0"
description = "programme for building, testing, and deploying machine learning models fed on urban observatory data"
authors = ["Carrow Morris-Wiltshire <carrow.m.w@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
dash = ">=2.15.0"
matplotlib = ">=3.8.3"
networkx = ">=3.2.1"
pandas = ">=2.2.0"
plotly = ">=5.19.0"
requests = ">=2.31.0"
scikit-learn = ">=1.4.1.post1"
scipy = ">=1.12.0"
shapely = ">=2.0.2"
torch = ">=2.2.0"
typing-extensions = ">=4.0.0, <4.9.0"
urllib3 = ">=2.2.1"
dash-bootstrap-components = "^1.6.0"
poetry-env-test = "^0.1.1"
gunicorn = "^22.0.0"
mlflow = "^2.14.3"
psycopg2 = "^2.9.9"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.1"
code2flow = ">=2.5.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
